<package format="3">

  <name>axis_camera</name>
  <version>0.4.3</version>
  <description>
    Python ROS drivers for accessing an Axis camera's MJPG
    stream. Also provides control for PTZ cameras.
  </description>
  <maintainer email="jasonk@fremont.ai">Jason Kelly</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/axis_camera</url>
  <url type="repository">https://github.com/ros-drivers/axis_camera</url>
  <url type="bugtracker">https://github.com/ros-drivers/axis_camera/issues</url>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>python3-setuptools</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
